tests/testcases/valid/semantic/test_array_increment.ciel
int main() {
    int arr[5] = {1, 2, 3, 4, 5};
    arr[0]++;
    ++arr[1];
    if (arr[0] != 2) return 1;
    if (arr[1] != 3) return 2;

    int x = arr[2]++;
    if (x != 3) return 3;
    if (arr[2] != 4) return 4;

    int y = ++arr[3];
    if (y != 5) return 5;
    if (arr[3] != 5) return 6;

    return 0;
}
