tests/testcases/invalid/semantic/78_prefix_increment_on_postfix_result.ciel
// Error: prefix increment on postfix increment result (rvalue)
int main() {
    int a = 5;

    // Error: (a++) returns rvalue, prefix ++ requires lvalue
    ++(a++);

    return 0;
}
